--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-bundle": "^3.2",
         "doctrine/doctrine-migrations-bundle": "^4.0",
         "doctrine/orm": "^3.6",
+        "easycorp/easyadmin-bundle": "^4.27",
         "symfony/asset": "^8.0",
         "symfony/console": "8.0.*",
         "symfony/dotenv": "8.0.*",
